# cluv

./: .gitignore  BUG_FIX_REPORT.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DOCUMENT_INDEX.md  FINAL_REPORT.md  IMPROVEMENTS.md  MATERIAL_USAGE_GUIDE.md  Makefile  PROJECT_IMPROVEMENTS_README.md  PROTOCOL_REFACTOR_COMPLETE.md  README.md  REFACTOR_SUMMARY.md  ROADMAP.md  VERIFICATION_CHECKLIST.md  index.html
crates/kiva-cut/: Cargo.toml
crates/kiva-cut/examples/: composer.rs  edit.rs  editor_load_proto.rs
crates/kiva-cut/src/: ffprobe.rs  options.rs
crates/kiva-cut/src/composer/: composer.rs  style.rs
crates/kiva-cut/src/cut/: mod.rs
crates/kiva-cut/src/ffmpeg/: input.rs  mod.rs
crates/kiva-cut/src/pkg/: id.rs
docs/: PHASE1_COMPLETE.md  PHASE1_COMPLETION_REPORT.md  PHASE1_QUICKSTART.md  PHASE2_CHECKLIST.md  PHASE2_COMPLETE.md  PHASE2_COMPLETION_REPORT.md  PHASE2_QUICKSTART.md  PHASE2_SUMMARY.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PLAYER_IMPLEMENTATION_PLAN.md  PLAYER_WEBGL_DESIGN.md  STEP7_COMPLETION.md  STEP7_QUICK_REFERENCE.md  STEP7_SESSION_SUMMARY.md  cut_proto.json  phase1-implementation-summary.md  phase2-drag-drop-guide.md  phase3-playback-sync-guide.md  player-implementation-plan.md  timeline-implementation-plan.md  timeline-usage-guide.md
docs/player-webgl/: BUGFIX_SUMMARY.md  PHASE2_BUGFIX.md  PHASE3_COMPLETION.md  PHASE3_SUMMARY.md  PHASE4_COMPLETION.md  PHASE4_QUICKSTART.md  PHASE4_SUMMARY.md  PLAYER_REFACTOR_PLAN.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETE.md  STEP1_COMPLETION.md  STEP2_COMPLETION.md  STEP3_COMPLETION.md  STEP4_COMPLETION.md  STEP5_COMPLETION.md  STEP5_QUICK_REFERENCE.md  STEP6_COMPLETION.md  STEP6_QUICK_REFERENCE.md  STEP6_SESSION_SUMMARY.md  STEP8_COMPLETION.md  STEP8_QUICK_REFERENCE.md  STEP8_SESSION_SUMMARY.md  TESTING_GUIDE.md
examples/: basic_transcode.rs  common.rs  composer.rs  edit.rs  edit_example.rs  editor_load_proto.rs  filter.rs  mediainfo.rs  screenshot.rs  simple_edit.rs  snapshot.rs
frontend/: INTEGRATION_TEST_GUIDE.md  Makefile  OPTIMIZATION_COMPLETE.md  PROJECT_SYSTEM_COMPLETE.md  PROJECT_SYSTEM_GUIDE.md  QUICK_REFERENCE.md  mac_icon.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ProjectCard.tsx  WindowControls.tsx
frontend/app/editor/: DEVELOPMENT_GUIDE.md  OPTIMIZATION_SUMMARY.md  README.md  page.tsx
frontend/app/hooks/: usePlatform.ts  useProjectList.ts  useTauriCommands.ts
frontend/app/player/: page.tsx
frontend/app/project/: page.tsx  types.ts
frontend/app/projects/: page.tsx
frontend/app/types/: index.ts  renderer.ts  scene.ts  tauri-plugin-os.d.ts  webgl.ts
frontend/app/webgl/: README.md
frontend/docs/: STEP9_COMPLETION.md  STEP9_QUICK_REFERENCE.md  STEP9_UI_INTEGRATION.md
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: history.rs  lib.rs  material_manager.rs  models.rs  paths.rs  resources.rs
frontend/src-tauri/src/commands/: editor.rs  material.rs  mod.rs  project.rs  resources.rs
frontend/src-tauri/src/service/: history.rs  material.rs  mod.rs  paths.rs
kiva-cut/: Makefile
kiva-cut/examples/: README.md  edit.rs  editor_load_proto.rs  filter.rs  mediainfo.rs
kiva-cut/src/: error.rs  ffprobe.rs  lib.rs
kiva-cut/src/composer/: mod.rs
kiva-cut/src/cut/: editor.rs  material.rs  mod.rs  protocol.rs  segment.rs  stage.rs  track.rs
kiva-cut/src/ffcut/: editor.rs  material.rs  protocol.rs  track.rs
kiva-cut/src/ffmpeg/: codec.rs  mod.rs  (+2 more)
src/: ffprobe.rs  lib.rs  main.rs  options.rs  snapshot.rs  transcode.rs
src/composer/: Cargo.toml  cli.rs  main.rs  musicxml.rs  render.rs
src/edit/: editor.rs  material.rs  mod.rs  protocol.rs  track.rs
src/ffcut/: editor.rs  material.rs  mod.rs  protocol.rs  segment.rs  stage.rs  track.rs
src/ffmpeg/: codec.rs  filter.rs  input.rs  mod.rs  naming.rs  output.rs  stream.rs  util.rs
(+150 files in other folders)
