[package]
name = "mei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
image = "0.24.7"
rand = "0.8.5"
# tokio = { version = "1.35.1", features = ["full"] }


# [[example]]
# name = "common"
# path = "examples/common.rs"
