[package]
name = "cluv"
version = "0.1.0"
edition = "2021"
authors = ["Justyer <1554694323@qq.com>"]
description = "A friendly FFmpeg wrapper for Rust."
license = "MIT"
repository = "https://github.com/fxkt-tech/cluv"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"
log = "0.4"
env_logger = "0.10"

# For SVG generation (if needed)
svg = { version = "0.13", optional = true }

# For async file operations
async-trait = "0.1"

[features]
default = []
svg-support = ["svg"]

[dev-dependencies]
tempfile = "3.0"
