[package]
name = "kiva-cut"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A friendly FFmpeg wrapper for Rust, featuring video editing with track-based composition and cut protocol support."

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
midly = "0.5"
quick-xml = { version = "0.31", features = ["serialize"] }

# For SVG generation (if needed)
svg = { version = "0.13", optional = true }

# For async file operations
async-trait = "0.1"
rand = "0.9.2"
sqids = "0.4.2"
chrono = "0.4.42"

[features]
default = []
svg-support = ["svg"]

[dev-dependencies]
tempfile = "3.0"
