[package]
name = "KivaCut"
version = "0.1.0"
description = "A NLE"
authors = ["kiva"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.91.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1", features = ["devtools"] }
tauri-plugin-log = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tauri-plugin-fs = "2"
